--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,14 @@ __pycache__/
 *.pyo
 *.pyd
 
-# 가상환경
+# 가상환경 (UV)
+.venv/
 venv/
 ENV/
 .env
-.venv
+
+# UV 관련
+# uv.lock은 버전 관리에 포함 (의존성 잠금 파일)
 
 # macOS
 .DS_Store
